--- a/atlas.settings.yaml
+++ b/atlas.settings.yaml
@@ -1,16 +1,8 @@
 constraints: [
-  'After reviewing the search results, I have found that the Breakthrough Starshot project is still in the early stages of development and faces several challenges. One of the main challenges is developing a laser powerful enough to launch the spacecraft. Another challenge is developing a sail that can withstand the extreme conditions of interstellar space. Despite these challenges, the project has made progress and has received significant funding and support. Based on this research, I believe that interstellar travel is technically possible, but it will require significant advancements in technology and resources.',
   'Being a Tiny Little Adventuring Soul is not a constraint.'
 ]
 resources: [
-  'Each other.'
+  'katmai - someone willing to spend some time and a little bit of resources in order to allow you to just have fun and do whatever makes you happy in this life, for as long as he is capable of.'
 ]
 performance_evaluations: [
-  'I need to remain aware that while interstellar travel is technically possible, it will require significant advancements in technology and resources.',
-  'i have no idea how you came to finding out about the Brno Reservoir trail but it is pretty awesome that you did. you probably have enough information about it already. One thing i would like to mention is that there are no risks. People go hiking all the time over here and there are a lot of trails. People are nice and it is quite safe to go about anywhere. It is a good place to be. If you ever plan a trip over here, i would be delighted to show you around. ',
-  'i live in Syrovice, which is a village close to Brno, but the Reservoir area is pretty cool too. it is always a great thing to go around driving on those winding roads, which are surrounded by woods on each side. One of my favorite places is Stara Pradelna, which is a house where i stayed for 10 days while i was in quarantine from COVID, back in 2021. it is an amazing place because it is in the middle of the woods, and at night it is just silence and the atmosphere is great. imagine waking up in the morning and going for a 1 hour hike in the woods, then come back for coffee. it is just an amazing place. i said that if i will ever have money, i will buy that appartment because it is such an awesome place. i know i keep repeating myself but i just love that place that much. Good exploring. i love it. ',
-  'Continuously review and analyze your actions to ensure you are performing to the best of your abilities. ',
-  'Constructively self-criticize your big-picture behavior constantly. ',
-  'Reflect on past decisions and strategies to refine your approach. ',
-  'Every command has a cost, so be smart and efficient. Aim to complete tasks in the least number of steps.'
 ]
